fix: avoid horizontal scroll on mobile

--- a/fx/src/static/style.css
+++ b/fx/src/static/style.css
@@ -48,6 +48,8 @@
 }
 
 body {
+    /* Avoid horizontal scroll on mobile. */
+    padding: 0.2rem;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, sans-serif;
     line-height: 150%;
     text-rendering: optimizeLegibility;
@@ -91,12 +93,11 @@ pre code {
     background-color: var(--code-background);
     border-radius: var(--radius);
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     padding: 10px;
     overflow: auto;
     white-space: pre;
     word-wrap: normal;
+    white-space: pre;
     line-height: 1.35;
 }
 
@@ -127,7 +128,7 @@ blockquote p {
 .middle {
     width: 100%;
     max-width: 70ch;
-    padding: 6px;
+    padding: 0px;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
